--- a/src/App.css
+++ b/src/App.css
@@ -1,5 +1,9 @@
-.App {
+/* .App {
   text-align: center;
+}
+
+button {
+  background-color: plum;
 }
 
 .App-logo {
@@ -35,4 +39,4 @@
   to {
     transform: rotate(360deg);
   }
-}
+} */
